--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.15.2",
     "gojs": "^1.7.7",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "babel": "^6.23.0",
