--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^3.3.7",
     "express": "^4.15.2",
     "jquery": "^3.2.1",
+    "nodemailer": "^4.0.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "underscore": "^1.8.3"
